syntax = "proto3";
import "google/protobuf/empty.proto";

package hero;

service HeroesService {
  rpc FindOne (HeroById) returns (Hero) {}
  rpc GetAll (google.protobuf.Empty) returns (HeroList) {}
}

message HeroById {
  int32 id = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}

message HeroList {
  repeated Hero heroes = 1;
}
